- Revised xml operations, wild changes to prompts - Added boolean parsing to RProcessor